<resources>
    <string name="app_name">Menu</string>

    <string name="name_hint">Wprowadź nazwę zadania</string>
    <string name="name_label">Nazwa Pizzy</string>
    <string name="details_label">Wybierz sos</string>
    <string name="done_label">W koszyku</string>
    <string name="task_add_new">Nowe zadanie</string>
    <string name="show_subtitle">Pokaż Koszyk</string>
    <string name="hide_subtitle">Ukryj Koszyk</string>
    <string name="subtitle_format">%1$d produkty w koszyku</string>
    <string name="subtitle_format_many">%1$d produktów w koszyku</string>
    <string name="subtitle_format_one">%1$d produkt w koszyku</string>
    <string name="order_label">Zamówienie</string>
    <string name="sum_label">Razem</string>
    <string name="name_pizzas">Lista pizz</string>
    <string name="sum_total">Do zapłaty</string>
    <string name="address_label">Wpisz adres</string>
    <string name="write_address">Twój adres</string>
    <string name="click_order">Zamów</string>
    <string name="thank_you">Dziękujemy!</string>
    <string name="pizzaLabel" >Cena: </string>
    <string name="Login" >Witaj w Pizzerii!</string>
    <string name="usernameInput" >Nazwa użytkownika</string>
    <string name="passwordInput" >Hasło</string>
    <string name="loginButton" >Login</string>
    <string name="findUsWhere" >Znajdziesz nas na youtube tutaj:</string>
    <string name="rickRollButton" >Odwiedź nas!</string>
    <string name="choose_size">Wybierz rozmiar</string>

    <string name="Login" >Login</string>
</resources>