<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_label"
        android:textColor="@color/purple_700"/>

    <TextView
        android:id="@+id/list_of_pizzas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_pizzas"
        android:minHeight="48dp" />

    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_label"
        android:textColor="@color/purple_700"/>

    <TextView
        android:id="@+id/sum_prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sum_total"
        android:minHeight="48dp" />

    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label"
        android:textColor="@color/purple_700"/>

    <EditText
        android:id="@+id/address_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_address"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/order_button"
        style="@style/TextFieldsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_order"/>



</LinearLayout>