<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/task_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingRight="100dp"
        android:rotation="90"
        tools:srcCompat="@drawable/pizza1" />

    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/name_label"
        android:textColor="@color/purple_700" />

    <TextView
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:minHeight="48dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        android:textColor="@color/purple_700"
        android:layout_marginLeft="20dp"/>


    <Spinner
        android:id="@+id/dip_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"/>

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label"
        android:textColor="@color/purple_700"
        android:layout_marginLeft="20dp"/>

</LinearLayout>